--- a/styleRECORDS.css
+++ b/styleRECORDS.css
@@ -109,22 +109,30 @@ body {
     color: var(--white);
 }
 .record-filter {
-    margin-left: 3rem;
-    display: flex;
-    gap: 1rem;
+    position: absolute;
+    top: 110%;
+    left: 1rem;
+    width: 100%;
+    display: none;
+    flex-direction: column;
+    background-color: var(--white);
     color: var(--white);
+    z-index: 99;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 .record-filter > button {
-    font-size: 0.8rem;
-    background-color: var(--brown);
+    font-size: 1rem;
+    padding: 1rem 0;
+    background-color: var(--white);
     border: none;
     cursor: pointer;
     transition: 0.4s ease-in-out;
-    color: var(--white);
+    color: var(--black);
 }
 .record-filter > button:hover {
-    color: var(--white);
+    color: var(--black);
     text-decoration: underline;
+    background-color: rgba(255, 255, 255, 0.2);
 }
 .search-filter {
     display: flex;
@@ -141,14 +149,20 @@ body {
 .view-header {
     font-size: 1.5rem;
     font-weight: 600;
-    margin: 3rem 0 1rem;
-    padding: 0 1rem;
+    padding: 0 0 0 1rem;
+    position: relative;
+    width: fit-content;
+    cursor: pointer;
 }
 .close-nav {
     position: absolute;
     top: 1rem;
     right: 2%;
     font-size: 1.5rem;
+}
+.filter-cont {
+    display: flex;
+    margin: 1rem 0;
 }
 
 /* Table */
@@ -202,7 +216,7 @@ tr:hover {
 .add-btn {
     position: fixed;
     z-index: 10;
-    top: 2rem;
+    top: 9.5rem;
     right: 2%;
     padding: 0.5rem;
     border-radius: 5px;
