--- a/styleADDREC.css
+++ b/styleADDREC.css
@@ -32,62 +32,17 @@ body {
     width: 100%;
     min-width: 1000px;
     height: 100vh;
-    overflow: hidden;
-    display: grid;
-    grid-template-columns: 1fr 4fr;
 }
-
-/* Nav Wrapper */
-.nav-wrapper {
-    background-color: var(--white);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 3rem 0;
-    gap: 3rem;
-    border-right: 2px solid var(--black);
-}
-.icon-wrapper {
-    font-size: clamp(1.25rem, 0.7143rem + 1.7143vw, 2rem);
-    font-weight: 900;
-}
-.nav-items {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-.nav-items > button {
-    font-size: clamp(0.7rem, 0.4857rem + 0.6857vw, 1rem);
-    cursor: pointer;
-    padding: 0.5rem 1rem;
-    border-radius: 10px;
-    border: unset;
-    font-weight: 600;
-    box-shadow: 0 2px 10px var(--grey);
-    transition: 200ms ease-in;
-}
-.nav-items > button:not(.active-btn) {
-    background-color: var(--pink);
-}
-/* Active Button */
-.active-btn {
-    background-color: var(--brown);
-    color: var(--white);
-}
-/* Button Hover */
-.nav-items > button:not(.active-btn):hover {
-    background-color: var(--brown);
-    color: var(--white);
-}
-
 
 /* Body Wrapper */
 .main-content {
     background-color: var(--white);
-    overflow: hidden auto;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding: 1rem 1%;
+    min-height: 100vh;
 }
 
 /* Main Content */
@@ -170,6 +125,9 @@ input, select {
     color: green;
 }
 .backbtn {
+    position: absolute;
+    top: 1rem;
+    left: 1%;
     border: none;
     box-shadow: 0 0 10px 1px grey;
     background-color: var(--black);
@@ -185,12 +143,19 @@ input, select {
     width: 50%;
     padding-inline: 1rem;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-column-gap: 1rem;
     grid-row-gap: 1rem;
 }
 .opt-area button {
     padding: 0.5rem 1rem;
+    border: none;
+    outline: inherit;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+.opt-area button:hover {
+    background-color: var(--bggreen);
 }
 
 /* popup form */
